src/test/ui/error-codes/E0107-b.stderr
error[E0107]: wrong number of type arguments: expected 2, found 4
  --> $DIR/E0107-b.rs:6:42
   |
LL |  pub struct Foo { i: Box<T<usize, usize, usize, usize, B=usize>> }
   |                                          ^^^^^  ^^^^^ unexpected type argument
   |                                          |
   |                                          unexpected type argument

error[E0191]: the value of the associated type `A` (from the trait `T`) must be specified
  --> $DIR/E0107-b.rs:6:26
   |
LL |  pub struct Foo { i: Box<T<usize, usize, usize, usize, B=usize>> }
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing associated type `A` value

error[E0191]: the value of the associated type `C` (from the trait `T`) must be specified
  --> $DIR/E0107-b.rs:6:26
   |
LL |  pub struct Foo { i: Box<T<usize, usize, usize, usize, B=usize>> }
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing associated type `C` value

error: aborting due to 3 previous errors

Some errors occurred: E0107, E0191.
For more information about an error, try `rustc --explain E0107`.
