src/test/ui/error-codes/E0107-b.rs
pub trait T<X, Y> {
    type A;
    type B;
    type C;
}
 pub struct Foo { i: Box<T<usize, usize, usize, usize, B=usize>> }

 fn main() {}
